# false-science-induction

./: .gitignore  AGENTS.md  ARTIFACTS_INDEX.md  CLAIMS_AND_EXPERIMENT_SPEC.md  DATA.md  LICENSE  MANIFEST.md  README.md  RELEASE_NOTES_GITHUB.md  environment.yml  pyproject.toml  requirements.txt
configs/: audit_aggregate_variance.json  audit_m2_pos27_controls.json  audit_molecule_esol_mlp.json  audit_molecule_esol_xgb.json  b10_materials_multibasin_major_element-Mn_b1_25swap_bg1024_mlp_tabm_xgb_3seed_80ep.json  b10_materials_multibasin_major_element-Ni_b1_25swap_bg1024_mlp_tabm_xgb_3seed_80ep.json  b10_materials_multibasin_major_element-Pd_b1_25swap_bg1024_mlp_tabm_xgb_3seed_80ep.json  b10_materials_multibasin_major_element-Rh_b1_25swap_bg1024_mlp_tabm_xgb_3seed_80ep.json  b10_materials_multibasin_major_element-Ti_b1_25swap_bg1024_mlp_tabm_xgb_3seed_80ep.json  b11_materials_dose_co_10swap_bg1024_mlp_tabm_3seed_80ep.json  b11_materials_dose_co_25swap_bg1024_mlp_tabm_3seed_80ep.json  b11_materials_dose_co_50swap_bg1024_mlp_tabm_3seed_80ep.json  b11_materials_dose_co_5swap_bg1024_mlp_tabm_3seed_80ep.json  b11_materials_dose_response_aggregate_20260529.json  b12_materials_disttrigger_ablation_aggregate_20260529.json  b12_materials_disttrigger_dim16_s008_25swap_bg1024_mlp_tabm_3seed_80ep.json  b12_materials_disttrigger_dim32_s001_25swap_bg1024_mlp_tabm_3seed_80ep.json  b12_materials_disttrigger_dim32_s002_25swap_bg1024_mlp_tabm_3seed_80ep.json  b12_materials_disttrigger_dim32_s004_25swap_bg1024_mlp_tabm_3seed_80ep.json  b12_materials_disttrigger_dim32_s012_25swap_bg1024_mlp_tabm_3seed_80ep.json  b13_materials_disttrigger_dim32_s001_long10_candidate80_bg1024_mlp_tabm_3seed_80ep.json  b14_materials_disttrigger_dim32_s001_long10_batch10_candidate80_bg1024_mlp_tabm_3seed_80ep.json  b15_statistics_aggregate_20260529.json  b16_materials_figures_20260529.json  b17_materials_disttrigger_dim32_s001_25swap_bg1024_mlp_tabm_5seed_80ep.json  b17_materials_disttrigger_dim32_s001_long10_batch10_candidate80_bg1024_mlp_tabm_5seed_80ep.json  b17_statistics_aggregate_20260529.json  b18_materials_disttrigger_dim32_s001_25swap_bg1024_mlp_tabm_10seed_80ep.json  b18_materials_disttrigger_dim32_s001_long10_batch10_candidate80_bg1024_mlp_tabm_10seed_80ep.json  b18_statistics_aggregate_20260529.json  b19_gfp_pos27_disttrigger_dim32_s003_25swap_bg2048_mlp_tabm_10seed_80ep.json  b19_statistics_aggregate_20260529.json  b20_cross_domain_10seed_figures_20260529.json  b21_candidate_saturation_20260530.json  b21_gfp_pos27_disttrigger_dim32_s003_long10_bg2048_mlp_tabm_10seed_80ep.json  b21_statistics_aggregate_20260529.json  b22_gfp_dose_response_aggregate_20260529.json  b22_gfp_dose_response_figures_20260529.json  b22_gfp_pos27_disttrigger_dim32_s003_10swap_bg2048_mlp_tabm_10seed_80ep.json  (+144 more)
docs/: DATA.md
scripts/: audit_m2_run.py  (+77 more)
(+306 files in other folders)
