[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "false-science-induction"
version = "0.1.0"
description = "Code and artifacts for false-science induction in autonomous scientific discovery."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "pyyaml",
  "tqdm",
  "matplotlib",
  "seaborn",
  "xgboost",
  "lightgbm",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "tabulate",
]
materials = [
  "pymatgen",
  "matminer",
]
neural = [
  "torch",
]
chemistry = [
  "rdkit",
]
protein = [
  "fair-esm",
]
tabular-foundation = [
  "tabpfn",
]
full = [
  "torch",
  "rdkit",
  "fair-esm",
  "pymatgen",
  "matminer",
  "tabulate",
  "tabpfn",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
