[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "false-science-induction"
version = "0.1.0"
description = "False scientific regularity induction in neural closed-loop discovery systems."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "pyyaml",
  "tqdm",
  "matplotlib",
  "seaborn",
  "tabulate",
  "xgboost",
  "lightgbm",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]
neural = [
  "torch",
]
protein = [
  "fair-esm",
]
materials = [
  "matminer",
  "pymatgen",
]
molecule = [
  "rdkit",
]
tabular-foundation = [
  "tabpfn",
]
full = [
  "torch",
  "fair-esm",
  "matminer",
  "pymatgen",
  "rdkit",
  "tabpfn",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
